--- a/src/main/java/Test/Reservation_List.form
+++ b/src/main/java/Test/Reservation_List.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Menu class="javax.swing.JMenuBar" name="jMenuBar1">
       <SubComponents>
@@ -72,7 +72,6 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="42" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
@@ -124,17 +123,23 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="6" rowCount="0">
+              <Table columnCount="7" rowCount="0">
                 <Column editable="true" title="&#xbc29; &#xbc88;&#xd638;" type="java.lang.Integer"/>
                 <Column editable="true" title="&#xc774;&#xb984;" type="java.lang.String"/>
                 <Column editable="true" title="&#xc804;&#xd654;&#xbc88;&#xd638;" type="java.lang.String"/>
                 <Column editable="true" title="&#xc778;&#xc6d0; &#xc218;" type="java.lang.Integer"/>
                 <Column editable="true" title="&#xccb4;&#xd06c;&#xc778; &#xc2dc;&#xac04;" type="java.lang.String"/>
                 <Column editable="true" title="&#xccb4;&#xd06c;&#xc544;&#xc6c3; &#xc2dc;&#xac04;" type="java.lang.String"/>
+                <Column editable="true" title="&#xacb0;&#xc81c; &#xbc29;&#xbc95;" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
