--- a/src/main/java/Test/Menu_list.form
+++ b/src/main/java/Test/Menu_list.form
@@ -168,10 +168,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="0">
-                <Column editable="true" title="&#xc74c;&#xc2dd; &#xc885;&#xb958;" type="java.lang.Object"/>
-                <Column editable="true" title="&#xc74c;&#xc2dd; &#xc774;&#xb984;" type="java.lang.Object"/>
-                <Column editable="true" title="&#xc74c;&#xc2dd; &#xac00;&#xaca9;" type="java.lang.Object"/>
-                <Column editable="true" title="&#xc74c;&#xc2dd; &#xc218;&#xb7c9;" type="java.lang.Object"/>
+                <Column editable="true" title="&#xc74c;&#xc2dd; &#xc885;&#xb958;" type="java.lang.String"/>
+                <Column editable="true" title="&#xc74c;&#xc2dd; &#xc774;&#xb984;" type="java.lang.String"/>
+                <Column editable="true" title="&#xc74c;&#xc2dd; &#xac00;&#xaca9;" type="java.lang.Integer"/>
+                <Column editable="true" title="&#xc74c;&#xc2dd; &#xc218;&#xb7c9;" type="java.lang.Integer"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
