--- a/src/main/java/Test/Manager_Info_add.form
+++ b/src/main/java/Test/Manager_Info_add.form
@@ -154,6 +154,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="&#xcd94;&#xac00;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JPasswordField" name="jPasswordField1">
       <Events>
